Update lumberjack_turtle.md